# DownstreamTracking-SeedCLF

./: README.md  data_pipeline.py  data_utils.py  lookup_classifier.py  models.py  requirements.txt  utils.py
Classifier_in_cpp/: BinaryClassifier.cpp  BinaryClassifier.h  CMakeLists.txt  main.cpp  myconstants.h
Classifier_in_cpp/src/: BinaryClassifier.cpp  BinaryClassifier.h  LWTNNClassifier.cpp  PatBBDTSeedClassifier.cpp  PatBBDTSeedClassifier.h  PatNeuralNetworkSeedClassifier.cpp  PatNeuralNetworkSeedClassifier.h  PatNeuralNetworkTupledSeedClassifier.cpp  PatNeuralNetworkTupledSeedClassifier.h  TFBinaryClassifier.h  TupledNetworkClassifier.cpp  TupledNetworkClassifier.h
Seed Classifier development/: data_pipeline.py  models.py  requirements.txt  root_to_pandas.py  testpipeline.py  utils.py
Seed Classifier development/notebooks/: README.md
Seed Classifier development/notebooks/Evaluation/: Final Model comparison.ipynb
Seed Classifier development/notebooks/Feature analysis/: features_visualization_and_scalling.ipynb  train_test_data_split.ipynb
Seed Classifier development/notebooks/Training/: DNN - features and examples-Copy1.ipynb  DNN - keras-multiclass-problem.ipynb  DNN - keras.ipynb  DNN - limited features-Copy1.ipynb  DNN - lwtnn.ipynb  DNN - tupled model.ipynb  history.json
Seed Classifier implementation/: CMakeLists.txt  README.md  main.cpp
Seed Classifier implementation/BrunelDev_v52r6/Gaudi_LWTNN/: CMakeLists.txt
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatAlgorithms/: CMakeLists.txt
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatAlgorithms/doc/: release.notes
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatAlgorithms/python/PatAlgorithms/: PatAlgConf.py
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatAlgorithms/src/: FastForwardTool.cpp  FastForwardTool.h  FastFwdTool.cpp  FastFwdTool.h  PatAddTTCoord.cpp  PatAddTTCoord.h  PatBBDTSeedClassifier.cpp  PatBBDTSeedClassifier.cpp~  PatBBDTSeedClassifier.h  PatBBDTSeedClassifier.h~  PatDownTrack.cpp  PatDownTrack.h  PatForward.cpp  PatForward.h  PatForwardTool.cpp  PatForwardTool.h  PatFwdTool.cpp  PatFwdTool.h  PatFwdTrackCandidate.h  PatLWTNNSeedClassifier.cpp  PatLWTNNSeedClassifier.cpp~  PatLWTNNSeedClassifier.h  PatLWTNNSeedClassifier.h~  PatLongLivedTracking.cpp  PatLongLivedTracking.h  PatMakeV0.cpp  PatMakeV0.h  PatMatch.cpp  PatMatch.h  PatMatchTool.cpp  PatMatchTool.h  PatRange.h  PatSeedFit.cpp  PatSeedFit.h  PatSeedTool.cpp  PatSeedTool.h  PatSeedTrack.cpp  PatSeedTrack.h  PatSeeding.cpp  PatSeeding.h  (+3 more)
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatAlgorithms/src/TMVA/Forward/: ASFDeep.class.C  BXF_4XPlanes.class.C
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatAlgorithms/src/TMVA/PatLLT/: PatLLT_MLPBNN.C
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatKernel/: CMakeLists.txt
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatKernel/PatKernel/: IPatDebugTTTool.h  IPatMvaClassifier.h  IPatTTCounter.h  PatForwardHit.h  PatTStationHitManager.h  PatTTHit.h  PatTTStationHitManager.h
Seed Classifier implementation/BrunelDev_v52r6/Tf/PatKernel/src/: PatTTStationHitManager.cpp
Seed Classifier implementation/BrunelDev_v52r6/Tr/TrackMCTools/: CMakeLists.txt
Seed Classifier implementation/BrunelDev_v52r6/Tr/TrackMCTools/doc/: release.notes
Seed Classifier implementation/BrunelDev_v52r6/Tr/TrackMCTools/src/: AllTrackGhostClassification.cpp  AllTrackGhostClassification.h  CleanPatTrackSelector.cpp  CleanPatTrackSelector.h  DebugTrackingLosses.cpp  DebugTrackingLosses.h  DownstreamGhostClassification.cpp  DownstreamGhostClassification.h  IdealStateCreator.cpp  IdealStateCreator.h  LHCbIDsToMCHits.cpp  LHCbIDsToMCHits.h  LHCbIDsToMCParticles.cpp  LHCbIDsToMCParticles.h  LongGhostClassification.cpp  LongGhostClassification.h  MeasureIPResolution.cpp  MeasureIPResolution.h  PGPrimaryVertex.cpp  PGPrimaryVertex.h  PatDebugTTTruthTool.cpp  PatDebugTTTruthTool.h  PatDebugTrackTool.cpp  PatDebugTrackTool.h  PatTStationDebugTool.cpp  PatTStationDebugTool.h  PatVeloDebugTool.cpp  PatVeloDebugTool.h  TTrackGhostClassification.cpp  TTrackGhostClassification.h  TrackGhostClassificationBase.cpp  TrackGhostClassificationBase.h  UpstreamGhostClassification.cpp  UpstreamGhostClassification.h  VeloGhostClassification.cpp  VeloGhostClassification.h  VeloRGhostClassification.cpp  VeloRGhostClassification.h
Seed Classifier implementation/BrunelDev_v52r6/data/: pat_nn_seed_clf_v1.3.json
Seed Classifier implementation/Seed Classifier - local/: CMakeLists.txt  main.cpp
Seed Classifier implementation/Seed Classifier - local/src/: LWTNNClassifier.cpp  LWTNNClassifier.h
Seed Classifier implementation/src/: LWTNNClassifier.cpp  LWTNNClassifier.h  PatBBDTSeedClassifier.h  PatLWTNNSeedClassifier.cpp  PatLWTNNSeedClassifier.h  TFBinaryClassifier.cpp  myconstants.h
Seed Classifier performance analysis/: CMakeLists.txt
Seed Classifier performance analysis/include/: Counters.h  Histograms.h  InputData_K.h  InputData_L.h  fitMass.h  ratioplot.h
Seed Classifier performance analysis/src/: fitMass.cpp  fitMassKs.C  fitMassLambda.C  main.cpp  ratioplot.C  ratioplot_C.d  roo_fit_example.cpp
data/: root_to_pandas.py
lwtnn converters/: keras2json.py
models/keras2lwtnn/lwtnn_v1_13/: architecture.json  lwtnn_model_v1_13.json  timing.txt  variables.json  weights.h5
notebooks/: DNN - features and examples.ipynb  DNN - keras-discrete features encoding.ipynb  DNN - keras.ipynb  DNN - limited features.ipynb  DNN - nbIT.ipynb  DNN - tupled model.ipynb  features_visualization_and_scalling.ipynb  final evaluation.ipynb
